--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,19 +1,22 @@
-version = "2.4.2"
+version = "2.6.4"
 maxColumn = 120
-align = most
+align.preset = most
+align.multiline = false
 continuationIndent.defnSite = 2
 assumeStandardLibraryStripMargin = true
 docstrings = JavaDoc
 lineEndings = preserve
 includeCurlyBraceInSelectChains = false
-danglingParentheses = true
+danglingParentheses.preset = true
 spaces {
   inImportCurlyBraces = true
 }
 optIn.annotationNewlines = true
+newlines.alwaysBeforeMultilineDef = false
 
 rewrite.rules = [SortImports, RedundantBraces]
 
+rewrite.redundantBraces.generalExpressions = false
 rewriteTokens = {
   "⇒": "=>"
   "→": "->"
